--- a/app/styles/components/_tag.scss
+++ b/app/styles/components/_tag.scss
@@ -33,6 +33,7 @@
     min-width: 40px;
     text-align: center;
     line-height: normal;
+    max-height: 36px;
     &.collection-tag {
         background-color: #838383;
         color: $white;
